build/log/idf_py_stdout_output_13236
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/moritz/coding/ils3000-arduino/build/bootloader/esp-idf/esptool_py && /home/moritz/.espressif/python_env/idf5.2_py3.10_env/bin/python /home/moritz/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/moritz/coding/ils3000-arduino/build/bootloader/bootloader.bin
Bootloader binary size 0x6850 bytes. 0x7b0 bytes (7%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ils3000_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/ils3000_main.c.obj 
/home/moritz/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/moritz/coding/ils3000-arduino/build/config -I/home/moritz/esp/esp-idf/components/newlib/platform_include -I/home/moritz/esp/esp-idf/components/freertos/config/include -I/home/moritz/esp/esp-idf/components/freertos/config/include/freertos -I/home/moritz/esp/esp-idf/components/freertos/config/xtensa/include -I/home/moritz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/moritz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/moritz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/moritz/esp/esp-idf/components/freertos/esp_additions/include -I/home/moritz/esp/esp-idf/components/esp_hw_support/include -I/home/moritz/esp/esp-idf/components/esp_hw_support/include/soc -I/home/moritz/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/moritz/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/moritz/esp/esp-idf/components/heap/include -I/home/moritz/esp/esp-idf/components/log/include -I/home/moritz/esp/esp-idf/components/soc/include -I/home/moritz/esp/esp-idf/components/soc/esp32 -I/home/moritz/esp/esp-idf/components/soc/esp32/include -I/home/moritz/esp/esp-idf/components/hal/platform_port/include -I/home/moritz/esp/esp-idf/components/hal/esp32/include -I/home/moritz/esp/esp-idf/components/hal/include -I/home/moritz/esp/esp-idf/components/esp_rom/include -I/home/moritz/esp/esp-idf/components/esp_rom/include/esp32 -I/home/moritz/esp/esp-idf/components/esp_rom/esp32 -I/home/moritz/esp/esp-idf/components/esp_common/include -I/home/moritz/esp/esp-idf/components/esp_system/include -I/home/moritz/esp/esp-idf/components/esp_system/port/soc -I/home/moritz/esp/esp-idf/components/esp_system/port/include/private -I/home/moritz/esp/esp-idf/components/xtensa/esp32/include -I/home/moritz/esp/esp-idf/components/xtensa/include -I/home/moritz/esp/esp-idf/components/xtensa/deprecated_include -I/home/moritz/esp/esp-idf/components/lwip/include -I/home/moritz/esp/esp-idf/components/lwip/include/apps -I/home/moritz/esp/esp-idf/components/lwip/include/apps/sntp -I/home/moritz/esp/esp-idf/components/lwip/lwip/src/include -I/home/moritz/esp/esp-idf/components/lwip/port/include -I/home/moritz/esp/esp-idf/components/lwip/port/freertos/include -I/home/moritz/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/moritz/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/moritz/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/moritz/esp/esp-idf/components/bt/include/esp32/include -I/home/moritz/esp/esp-idf/components/bt/common/osi/include -I/home/moritz/esp/esp-idf/components/bt/common/api/include/api -I/home/moritz/esp/esp-idf/components/bt/common/btc/profile/esp/blufi/include -I/home/moritz/esp/esp-idf/components/bt/common/btc/profile/esp/include -I/home/moritz/esp/esp-idf/components/bt/host/bluedroid/api/include/api -I/home/moritz/esp/esp-idf/components/bt/porting/ext/tinycrypt/include -I/home/moritz/esp/esp-idf/components/esp_timer/include -I/home/moritz/esp/esp-idf/components/esp_wifi/include -I/home/moritz/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/moritz/esp/esp-idf/components/esp_event/include -I/home/moritz/esp/esp-idf/components/esp_phy/include -I/home/moritz/esp/esp-idf/components/esp_phy/esp32/include -I/home/moritz/esp/esp-idf/components/esp_netif/include -I/home/moritz/esp/esp-idf/components/nvs_flash/include -I/home/moritz/esp/esp-idf/components/spi_flash/include -I/home/moritz/esp/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/moritz/coding/ils3000-arduino=. -fmacro-prefix-map=/home/moritz/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/ils3000_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/ils3000_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/ils3000_main.c.obj -c /home/moritz/coding/ils3000-arduino/main/ils3000_main.c
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c: In function 'ble_gatt_callback_charge_config_service':
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:234:91: error: 'gatt_charge_config_uuid_service' undeclared (first use in this function)
  234 |             memcpy(gl_profile_tab[PROFILE_CONFIG_APP_ID].service_id.id.uuid.uuid.uuid128, gatt_charge_config_uuid_service, ESP_UUID_LEN_128);
      |                                                                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:234:91: note: each undeclared identifier is reported only once for each function it appears in
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:242:75: error: 'GATTS_CHAR_UUID_TEST_A' undeclared (first use in this function); did you mean 'GATTS_CHAR_UUID_TEST_INFO'?
  242 |             gl_profile_tab[PROFILE_CONFIG_APP_ID].char_uuid.uuid.uuid16 = GATTS_CHAR_UUID_TEST_A;
      |                                                                           ^~~~~~~~~~~~~~~~~~~~~~
      |                                                                           GATTS_CHAR_UUID_TEST_INFO
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:245:13: error: 'a_property' undeclared (first use in this function); did you mean 'info_property'?
  245 |             a_property = ESP_GATT_CHAR_PROP_BIT_READ | ESP_GATT_CHAR_PROP_BIT_WRITE | ESP_GATT_CHAR_PROP_BIT_NOTIFY;
      |             ^~~~~~~~~~
      |             info_property
In file included from /home/moritz/coding/ils3000-arduino/main/ils3000_main.c:11:
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:254:26: error: 'GATTS_TAG' undeclared (first use in this function)
  254 |                 ESP_LOGE(GATTS_TAG, "add char failed, error code =%x",add_char_ret);
      |                          ^~~~~~~~~
/home/moritz/esp/esp-idf/components/log/include/esp_log.h:436:81: note: in definition of macro 'ESP_LOG_LEVEL'
  436 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                 ^~~
/home/moritz/esp/esp-idf/components/log/include/esp_log.h:366:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  366 | #define ESP_LOGE( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_ERROR,   tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:254:17: note: in expansion of macro 'ESP_LOGE'
  254 |                 ESP_LOGE(GATTS_TAG, "add char failed, error code =%x",add_char_ret);
      |                 ^~~~~~~~
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c: At top level:
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:120:13: warning: 'gatts_profile_config_event_handler' used but never defined
  120 | static void gatts_profile_config_event_handler(esp_gatts_cb_event_t event, esp_gatt_if_t gatts_if, esp_ble_gatts_cb_param_t *param);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:121:13: warning: 'gatts_profile_info_event_handler' used but never defined
  121 | static void gatts_profile_info_event_handler(esp_gatts_cb_event_t event, esp_gatt_if_t gatts_if, esp_ble_gatts_cb_param_t *param);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:225:13: warning: 'ble_gatt_callback_charge_config_service' defined but not used [-Wunused-function]
  225 | static void ble_gatt_callback_charge_config_service(esp_gatts_cb_event_t event, esp_gatt_if_t gatts_if, esp_ble_gatts_cb_param_t *param)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:99:27: warning: 'scan_rsp_data' defined but not used [-Wunused-variable]
   99 | static esp_ble_adv_data_t scan_rsp_data = {
      |                           ^~~~~~~~~~~~~
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:51:29: warning: 'info_property' defined but not used [-Wunused-variable]
   51 | static esp_gatt_char_prop_t info_property = 0;
      |                             ^~~~~~~~~~~~~
/home/moritz/coding/ils3000-arduino/main/ils3000_main.c:50:29: warning: 'config_property' defined but not used [-Wunused-variable]
   50 | static esp_gatt_char_prop_t config_property = 0;
      |                             ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
